deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oneview-2-acm-assets
  namespace: open-cluster-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oneview-2-acm-assets
  template:
    metadata:
      labels:
        app: oneview-2-acm-assets
    spec:
      containers:
        - name: cli
          image: 'registry.access.redhat.com/ubi7/ubi'
          command:
            - bash
            - '-c'
            - >-
              [...]
          volumeMounts:
            - name: assets
              mountPath: assets        
            - name: last
              mountPath: old                 
        - name: server
          command:
            - python3
            - server.py
            - '8080'            
          ports:
            - containerPort: 8080
              protocol: TCP
          image: 'quay.io/fdavalo/oneview-2-acm-assets:latest'
          volumeMounts:
            - name: assets
              mountPath: /opt/app-root/src/assets          
      serviceAccount: multicluster-operators
      volumes:
        - name: assets
          emptyDir: {}   
        - name: last
          emptyDir: {}
