route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: oneview-2-acm-hosts
  namespace: open-cluster-management
spec:
  host: oneview-2-acm-hosts.apps.ocp1.redhat.hpecic.net
  to:
    kind: Service
    name: oneview-2-acm-hosts
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
